message AttrInfoDatatable
{
	optional string tname = 1;
	repeated AttrInfoData tlist = 2;
}

message AttrInfoData
{
	required int32 ID = 1;
	optional string Tag = 2;
	optional string Name = 3;
	optional int32 Key = 4;
	optional string Des = 5;
}