message StageEventHandlerDatatable
{
	optional string tname = 1;
	repeated StageEventHandlerData tlist = 2;
}

message StageEventHandlerData
{
	required int32 ID = 1;
	optional bool IsNeedLoadRes = 2;
	optional bool ForbidCalledAtInit = 3;
	optional string Group = 4;
	optional int32 Index = 5;
	optional string Name = 6;
	optional string Des = 7;
	optional string Param1Name = 8;
	optional int32 Param1SourceType = 9;
	repeated int32 Param1SelectObjectType = 10;
	optional string Param1EnumTag = 11;
	optional string Param2Name = 12;
	optional int32 Param2SourceType = 13;
	repeated int32 Param2SelectObjectType = 14;
	optional string Param2EnumTag = 15;
	optional string Param3Name = 16;
	optional int32 Param3SourceType = 17;
	repeated int32 Param3SelectObjectType = 18;
	optional string Param3EnumTag = 19;
	optional string Param4Name = 20;
	optional int32 Param4SourceType = 21;
	repeated int32 Param4SelectObjectType = 22;
	optional string Param4EnumTag = 23;
	optional string Param5Name = 24;
	optional int32 Param5SourceType = 25;
	repeated int32 Param5SelectObjectType = 26;
	optional string Param5EnumTag = 27;
	optional string Param6Name = 28;
	optional int32 Param6SourceType = 29;
	repeated int32 Param6SelectObjectType = 30;
	optional string Param6EnumTag = 31;
}