message StageTriggerEventDatatable
{
	optional string tname = 1;
	repeated StageTriggerEventData tlist = 2;
}

message StageTriggerEventData
{
	required int32 ID = 1;
	repeated int32 EventTargetTypes = 2;
	optional string Name = 3;
	optional string Des = 4;
}